Fixed error in color contrast

--- a/frontend/src/assets/page/ProfilePage/ProfilePageStyles.css
+++ b/frontend/src/assets/page/ProfilePage/ProfilePageStyles.css
@@ -238,7 +238,7 @@
 .logoutButton {
     width: 90%;
     padding: 8px;
-    background-color: #ff4d4f;
+    background-color: #ec0000;
     color: #fff;
     border: none;
     border-radius: 6px;
